# example-package-armulrich

./: LICENSE  README.md  pyproject.toml  test.ipynb
tests/: test_rescale.py
