# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name         = "example-package-armulrich"
dependencies = ["numpy"]
dynamic = ["version"] 
description = "A one‑sentence summary of your package"
readme  = "README.md"  

[tool.hatch]
version.path = "src/example_package_armulrich/__init__.py"

## Adding testing
[project.optional-dependencies]
test = ["pytest"]
